k8s/catima-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  labels:
    io.kompose.service: catima-app
  name: catima-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: catima-app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      labels:
        io.kompose.network/app-catima-net: "true"
        io.kompose.service: catima-app
    spec:
      containers:
        - image: unillett/catima:latest-app
          name: catima-app
          ports:
            - containerPort: 3000
          resources: {}
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 600
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /var/www/catima
              name: app-data
      restartPolicy: Always
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data
status: {}
