k8s/catima-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  labels:
    io.kompose.service: catima-redis
  name: catima-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: catima-redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      labels:
        io.kompose.service: catima-redis
    spec:
      containers:
        - args:
            - redis-server
          image: redis:5
          name: catima-redis
          ports:
            - containerPort: 6379
          resources: {}
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            periodSeconds: 5
            timeoutSeconds: 5
            initialDelaySeconds: 30
          volumeMounts:
            - mountPath: /data
              name: redis-data
      restartPolicy: Always
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
status: {}
