k8s/catima-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  labels:
    io.kompose.service: catima-app
  name: catima-app
spec:
  ports:
    - port: 3000
  selector:
    io.kompose.service: catima-app
