k8s/catima-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  labels:
    io.kompose.service: catima-postgres
  name: catima-postgres
spec:
  ports:
    - port: 5410
      targetPort: 5432
  selector:
    io.kompose.service: catima-postgres
status:
  loadBalancer: {}
