k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catima-ingress
spec:
  defaultBackend:
    service:
      name: catima-app
      port:
        number: 3000
